--- a/css/main.css
+++ b/css/main.css
@@ -18,4 +18,42 @@ nav ul {
   background-color: #eee8d5;
 }
 
-#contents, #favs, #facts, #types
+#contents, #favs, #facts, #types {
+  color: #93a1a1;
+}
+
+.wrapper > .dfn {
+  background-color: #b58900;
+}
+
+.dfn + strong {
+  color: #fff;
+}
+
+a:not(.no-highlight) {
+  background-color: #719e07;
+}
+
+[rel="external"] {
+  background-color: #2694d8;
+}
+
+ol:first-child {
+  color: #719e47
+}
+
+ol:last-child {
+  color: #2aa198;
+}
+
+.types:nth-child(odd) {
+  background-color: #657ba3;
+}
+
+.types:nth-child(even) {
+  background-color: #586e75;
+}
+
+.types:nth-child(3) {
+  background-color: #d04b16;
+}
