--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,12 @@ body {
   background-color: #fdf6e3;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 header, footer {
   font-size: 1.5rem;
 }
@@ -38,22 +44,22 @@ a:not(.no-highlight) {
   background-color: #2694d8;
 }
 
-ol:first-child {
+ol li:first-child {
   color: #719e47
 }
 
-ol:last-child {
+ol li:last-child {
   color: #2aa198;
 }
 
-.types:nth-child(odd) {
+.types li:nth-child(odd) {
   background-color: #657ba3;
 }
 
-.types:nth-child(even) {
+.types li:nth-child(even) {
   background-color: #586e75;
 }
 
-.types:nth-child(3) {
+.types li:nth-child(3) {
   background-color: #d04b16;
 }
